# analysis-agent

./: .gitignore  README.md
.claude/: CLAUDE.md
.claude/rules/: backend.md  pipeline.md
backend/: README.md  pyproject.toml
backend/pipeline/case1/eda/: read_data.ipynb
